--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     </div>
   </template>
   <script src="js/util.js"></script>
+  <script src="js/move.js"></script>
   <script src="js/data.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
